[project]
name = "biopsykit"
version = "0.12.3"
description = "A Python package for the analysis of biopsychological data."
authors = [
    { name = "Robert Richer", email = "robert.richer@fau.de" },
    { name = "Arne Küderle", email = "arne.kuederle@fau.de" },
    { name = "Rebecca Lennartz", email = "rebecca.lennartz@fau.de" },
    { name = "Daniel Krauß", email = "daniel.k.krauss@fau.de" },
    { name = "Victoria Müller", email = "victoria.m.mueller@fau.de" },
    { name = "Martin Ullrich", email = "martin.ullrich@fau.de" },
    { name = "Janis Zenkner", email = "janis.zenkner@fau.de" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=1,<2",
    "pandas>=2,<3",
    "matplotlib~=3.9",
    "seaborn>=0,<1",
    "neurokit2>=0,<1",
    "pingouin>=0.5.2,<0.6",
    "scipy>=1,<2",
    "tqdm>=4,<5",
    "joblib>=1,<2",
    "scikit-learn~=1.0",
    "nilspodlib>=3.4.1",
    "openpyxl>=3,<4",
    "XlsxWriter>=1,<2",
    "xlrd>=2,<3",
    "statsmodels>=0,<1",
    "fau-colors~=1.1",
    "bioread>=3,<4",
    "tpcp>=1",
    "ts2vg>=1.2.4,<2",
    "statannotations>=0.7.1,<0.8",
]

[project.optional-dependencies]
mne = ["mne>=1.2.1,<2"]
jupyter = [
    "IPython>=7,<8",
    "ipympl>=0.9,<0.10",
    "ipywidgets>=8,<9",
]

[project.urls]
Homepage = "https://github.com/mad-lab-fau/biopsykit"
Repository = "https://github.com/mad-lab-fau/biopsykit"

[dependency-groups]
dev = [
    "black[jupyter, d]>=22,<23",
    "poethepoet>=0.10.0,<0.11",
    "pytest>=6,<7",
    "pytest-cov>=2,<3",
    "ipykernel>=6,<7",
    "ruff>=0,<1",
    "sphinx>=5,<6",
    "numpydoc>=1,<2",
    "sphinx-gallery>=0.10.0,<0.11",
    "sphinx_issues>=1.2.0,<2",
    "pydata-sphinx-theme>=0.6.2,<0.7",
    "recommonmark>=0.6.0,<0.7",
    "toml>=0.10.1,<0.11",
    "memory_profiler>=0.57.0,<0.58",
    "coverage-badge>=1.0.1,<2",
    "sphinx-copybutton>=0.4.0,<0.5",
    "nbsphinx>=0.8.7,<0.9",
]

[tool.hatch.build.targets.sdist]
include = ["src/biopsykit"]

[tool.hatch.build.targets.wheel]
include = ["src/biopsykit"]

[tool.hatch.build.targets.wheel.sources]
"src/biopsykit" = "biopsykit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
    | \.ipynb_checkpoints
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.poe.tasks]
_format_black = "black ."
_format_ruff = "ruff check . --fix-only"
format = { sequence = ["_format_black", "_format_ruff"], help = "Format all files." }
lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src --output-format=github"
_check_black = "black . --check"
ci_check = { sequence = ["_check_black", "_lint_ci"], help = "Check all potential format and linting issues." }
test = {cmd = "pytest --cov=biopsykit -cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = {"script" = "_tasks:task_docs"}
update_version = {"script" = "_tasks:task_update_version"}
register_ipykernel = { cmd = "python -m ipykernel install --user --name biopsykit --display-name biopsykit", help = "Add a new jupyter kernel for the project." }
remove_ipykernel = { cmd = "jupyter kernelspec uninstall biopsykit", help = "Remove the project specific jupyter kernel."}
default = {sequence = ["format", "lint", "test"], help = "Run the default pipeline, consisting of formatting, linting, and testing."}
